# felafax-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  test_openai.sh
src/: clickhouse.rs  error.rs  firebase.rs  firestore.rs  main.rs  request_logs.rs  utils.rs
src/client/: claude.rs  mamba.rs  mod.rs  openai.rs  traits.rs
src/handlers/: experiment.rs  mod.rs  openai_proxy.rs  proxy.rs  translate.rs
src/types/: chat.rs  config.rs  mod.rs
tests/: compare_times.py
tests/openai_python/: chat.py
tests/python/: benchmark.py  chat.py  chat_stream.py
