[package]
name = "felafax-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23.2"
async-trait = "0.1.80"
axum = {version = "0.7.4", features = ["json", "macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bytes = "1.6.0"
chrono = "0.4.38"
clickhouse = "0.11.6"
derive_builder = "0.20.0"
firestore = "0.42.0"
futures = "0.3.30"
headers = "0.4.0"
native-tls = "0.2.12"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", default-features = false, features = [
  "stream",
  "json",
  "gzip",
  "rustls-tls-native-roots"
] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
thiserror = "1.0.61"
tokio = "1.28.2"
tokio-util = "0.7.11"
tracing = "0.1.40"
url = "2.5.2"
uuid = "1.8.0"
